@@ -1,3 +1,6 @@
+2010-10-20
+  - Allow find_by_* methods to accept an options hash, so rails associations don't blow up
+
 2010-10-07
  - Add conditions to ActiveHash#all (Ryan Garver)
  - Add #cache_key to ActiveHash::Base (Tom Stuart)
